# team-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN-RULES.md  README.md  README.zh.md  package.json  pre-release-checklist.html  pyproject.toml
crates/conpty-transport/: Cargo.toml
crates/conpty-transport/src/: lib.rs  named_pipe_client.rs  protocol.rs  shim.rs
crates/team-agent/: Cargo.toml
crates/team-agent/src/: app_server_test_support.rs  codex_app_server.rs  compiler.rs  event_log.rs  fake_worker.rs  kill_audit.rs  lib.rs  main.rs  message_store.rs  os_probe.rs  redaction.rs  session_capture.rs  tmux_backend.rs  topology.rs  transport.rs  transport_factory.rs
crates/team-agent/src/cli/: adapters.rs  attach_app_server_leader.rs  diagnose.rs  emit.rs  helpers.rs  leader.rs  leaders.rs  mod.rs  named_address.rs  profile.rs  send.rs  spec.rs  status.rs  status_port.rs  types.rs
crates/team-agent/src/cli/send/: coordinator.rs  mailbox.rs  persist.rs  presentation.rs  resolve.rs  view.rs
crates/team-agent/src/cli/status_port/: agents.rs  approvals.rs  compact.rs  format.rs  inbox.rs  runtime.rs  snapshot.rs  store.rs  tests.rs
crates/team-agent/src/cli/tests/: base.rs  compile.rs  divergence.rs  lane_c.rs  leader_watch.rs  main_preserved.rs  missing_subcommands.rs  mod.rs  named_address.rs  peer_allow.rs  repair_state_byte_lock.rs  run_delegation.rs  shutdown_kill_plan.rs  status_send.rs  verb_install_skill.rs  verb_profile.rs  verb_settle.rs  verb_validate.rs
crates/team-agent/src/compiler/: tests.rs
crates/team-agent/src/conpty/: backend.rs  mod.rs  shim.rs
crates/team-agent/src/coordinator/: backoff.rs  conpty_shim.rs  health.rs  mod.rs  orphan.rs  runtime_detectors.rs  runtime_observation.rs  tick.rs  types.rs
crates/team-agent/src/coordinator/steps/: abnormal.rs  delivery.rs  health_sync.rs  mod.rs  persist.rs  runtime_prompts.rs  session_gate.rs
crates/team-agent/src/coordinator/tests/: a0_lostupdate.rs  abnormal.rs  api_error_recovery.rs  basics.rs  daemon.rs  energy.rs  health_sync.rs  main_preserved.rs  mod.rs  spine.rs  takeover.rs  tick_core.rs  watch.rs
crates/team-agent/src/db/: agent_health_capture.rs  message_store.rs  migration.rs  mod.rs  schema.rs
crates/team-agent/src/diagnose/: comms.rs  mod.rs  orphans.rs
crates/team-agent/src/layout/: manager.rs  mod.rs  overlay.rs  placement.rs  recovery.rs  runtime_sessions.rs  sessions.rs  tmux_endpoint.rs  worker_env.rs  worker_window_helpers.rs
crates/team-agent/src/leader/: helpers.rs  incident.rs  inject.rs  lease.rs  mod.rs  owner_bind.rs  provider_attribution.rs  rediscover.rs  registry.rs  start.rs  takeover.rs  types.rs
crates/team-agent/src/leader/rediscover/: tests.rs
crates/team-agent/src/leader/tests/: basics.rs  byte_findings.rs  identity.rs  idle.rs  lease_api.rs  lease_claim.rs  mod.rs  rediscover.rs  wake_start_owner.rs
crates/team-agent/src/lifecycle/: display.rs  helpers.rs  launch.rs  lock.rs  mod.rs  profile_launch.rs  profile_smoke.rs  restart.rs  tests.rs  types.rs  worker_command_context.rs
crates/team-agent/src/lifecycle/launch/: add_agent.rs  add_agent_state.rs  plan.rs  (+20 more)
crates/team-agent/src/mcp_server/: helpers.rs  mod.rs  normalize.rs  tests.rs  tools.rs  types.rs  wire.rs
crates/team-agent/src/messaging/: activity.rs  address.rs  delivery.rs  helpers.rs  leader_channel.rs  leader_receiver.rs  mod.rs  peers.rs  persist.rs  presentation.rs  results.rs  scheduler.rs  selftest.rs  send.rs  trust.rs  types.rs  watchers.rs
crates/team-agent/src/model/: enums.rs  errors.rs  ids.rs  mod.rs  name_similarity.rs  paths.rs  permissions.rs  routing.rs  spec.rs  task_graph.rs  yaml.rs
crates/team-agent/src/packaging/: install.rs  migrate.rs  mod.rs  repair.rs  tests.rs  types.rs
crates/team-agent/src/platform/: argv.rs  errors.rs  file_lock.rs  mod.rs  process.rs
crates/team-agent/src/provider/: adapter.rs  classify.rs  command.rs  faults.rs  helpers.rs  mod.rs  session_scan.rs  startup_prompt.rs  tests.rs  types.rs  wire.rs
crates/team-agent/src/state/: identity.rs  identity_keys.rs  mod.rs  owner_gate.rs  ownership.rs  paths.rs  persist.rs  projection.rs  repository.rs  selector.rs
crates/team-agent/src/tmux_backend/: tests.rs
crates/team-agent/src/transport/: test_support.rs
crates/team-agent/tests/: a0_current_turn_attribution_contract.rs  a0_lostupdate_red.rs  acceptance_b_batch_red.rs  add_agent_restart_saveconflict_contract.rs  b0_legacy_snapshot_nonauthority_contract.rs  b0_reader_hideone_audit_contract.rs  b5_e4_exec_provider_anchor_red.rs  b5_leader_terminal_kill_red.rs  behavioral_diff_264_red.rs  c1_command_spec_contract.rs  c2_command_internalization_deletion_contract.rs  c5_factory_no_probe_backend_lazy_red.rs  claim_attach_typed_incident_boundary_red.rs  claim_endpoint_convergence_contract.rs  claim_leader_mailbox_flush_contract.rs  claude_compatible_config_red.rs  claude_profile_launch_red.rs  claude_provider_classify_red.rs  claude_provider_command_plan_red.rs  claude_provider_trust_prompt_red.rs  cli_e2e_sessions_red.rs  cli_emit_error_red.rs  cli_init_red.rs  cli_sessions_red.rs  cli_unknown_command_red.rs  cli_validate_result_red.rs  clone_fork_copilot_perms_red.rs  clone_fork_latest_role_red.rs  clone_fork_parallel_lifecycle_red.rs  clone_fork_verified_session_red.rs  codex_mcp_approval_inheritance_red.rs  codex_weak_window_attribution_red.rs  conpty_end_to_end_fake_worker.rs  conpty_pipe_token_no_persist_guard.rs  conpty_shim_lifecycle_batch8_red.rs  coordinator_lifecycle_forensics_contract.rs  coordinator_service_compat_contract.rs  coordinator_version_rotation_contract.rs  copilot_provider_red.rs  core_034_real_red.rs  (+141 more)
crates/team-agent/tests/e2e/: framework.rs  main.rs  scripted_provider.rs
crates/team-agent/tests/support/: composite_source.rs  debt_sweep_0543.rs  hermetic.rs  mcp_sim_harness.rs  state_save_allowlist.rs  temp_workspace.rs
crates/win-conpty-phase0/: Cargo.toml  build.rs
crates/win-conpty-phase0/src/: conpty_cli.rs  main.rs  windows_shim.rs
crates/win-conpty-phase0/tests/: shim_reuse_batch7_red.rs
(+606 files in other folders)
