[package]
name = "conpty-transport"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "0.5.x Windows-native transport: shim wire protocol + portable shim server logic. Portable pure logic; the Windows-side pipe client and ConPTY-backed PaneRuntime live in `crates/win-conpty-phase0/src/windows_shim.rs`."
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# 0.5.x Windows portability Batch 5: `named_pipe_client` module uses
# `CreateFileW`/`WaitNamedPipeW`/`ReadFile`/`WriteFile` on Windows.
# Same `windows = "0.61"` version + subset of features already used by
# `win-conpty-phase0` and `team-agent::platform`.
[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
]
