[package]
name = "team-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "team_agent"
path = "src/lib.rs"

[[bin]]
name = "team-agent"
path = "src/main.rs"

# step 2 (model) 已落地: serde/serde_json/thiserror/sha2。
# rusqlite 仍留 workspace 调色板,step 3 (db) 再加(且需联网先 fetch)。
[dependencies]
conpty-transport = { path = "../conpty-transport" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
regex.workspace = true
chrono.workspace = true
libc.workspace = true
rusqlite.workspace = true       # step 3 db(bundled SQLite,静态链接)

# 0.5.x Windows portability Batch 2/3: uses the same `windows = "0.61"`
# crate as `win-conpty-phase0` so the workspace shares a single
# Windows-API crate + already-locked Cargo.lock version.
#
# - Batch 2 (`platform::file_lock`): `Win32_Storage_FileSystem`
#   (`LockFileEx`/`UnlockFileEx`) + `Win32_System_IO::OVERLAPPED`.
# - Batch 3 (`platform::process`): `Win32_System_Threading`
#   (`OpenProcess`, `TerminateProcess`, `GetExitCodeProcess`,
#   `GetCurrentProcessId`) + `Win32_System_Diagnostics_ToolHelp`
#   (Toolhelp snapshot for parent-pid discovery).
[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]

[dev-dependencies]
serial_test = { version = "3", features = ["file_locks"] }

# `tests/e2e/` 黑盒 E2E 框架专用 — 不需要 assert_cmd / predicates,
# 框架内部直接用 std::process::Command + serde_json + 自写 assert_* helpers,
# 保持 zero new external test-CLI deps(避开 crates.io 代理限制)。
[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true
