[package]
name = "win-conpty-phase0"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "0.5.x Windows-native transport Phase 0 ConPTY proof binary. Windows-only; not part of any product path."
publish = false

[[bin]]
name = "win-conpty-phase0"
path = "src/main.rs"

[[bin]]
name = "windows-shim"
path = "src/windows_shim.rs"

[target.'cfg(windows)'.dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
conpty-transport = { path = "../conpty-transport" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
]
